Config Kotlin & Aesthetics